# rules-go-cgo-glibc

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile.ubuntu1804  Dockerfile.ubuntu2204  README.md  WORKSPACE  docker-setup.sh  gendiff.sh  go.mod  print-build-info.sh  program.go  strings_test.go
sub/: BUILD.bazel
toolchain/: BUILD.bazel  my_toolchain_config.bzl  my_toolchain_config2.bzl  toolchain_config.bzl
